Added Fitur Change Password in Authentication App

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -23,6 +23,7 @@
             </button>
             <div id="dropdownMenu" class="hidden absolute right-0 mt-2 w-48 bg-white rounded-md shadow-lg py-1 z-50">
               <a href="{% url 'profile' %}" class="dropdown-item">Profile</a>
+              <a href="{% url 'change_password' %}" class="dropdown-item">Change Password</a>
               <a href="{% url 'logout' %}" class="dropdown-item">Logout</a>
             </div>
           </div>
