--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,9 +11,13 @@
           {% if user.role == 'admin' %}
             <a href="{% url 'admin_dashboard' %}" class="nav-link">Home</a>
             <a href="{% url 'admin_dashboard' %}" class="nav-link">Categories</a>
+            <a href="{% url 'admin_dashboard' %}" class="nav-link">Blog</a>
+            <a href="{% url 'admin_dashboard' %}" class="nav-link">Discussion</a>
           {% elif user.role == 'customer' %}
-          <a href="{% url 'customer_dashboard' %}" class="nav-link">Home</a>
+            <a href="{% url 'customer_dashboard' %}" class="nav-link">Home</a>
             <a href="{% url 'customer_dashboard' %}" class="nav-link">Categories</a>
+            <a href="{% url 'customer_dashboard' %}" class="nav-link">Blog</a>
+            <a href="{% url 'customer_dashboard' %}" class="nav-link">Discussion</a>
           {% endif %}
           
           <!-- Menu Profile dan Logout dengan dropdown -->
