--- a/main/templates/main_admin.html
+++ b/main/templates/main_admin.html
@@ -15,7 +15,7 @@
 {% endblock meta %}
 {% block content %}
 {% include 'navbar.html' %}
-<div class="overflow-x-hidden px-4 md:px-8 pb-8 pt-[4.5rem] min-h-screen bg-[#102820] flex flex-col">
+<div class="overflow-x-hidden px-4 md:px-8 pb-8 pt-[4.5rem] min-h-screen bg-gradient-to-r from-[#172810] to-[#102820] flex flex-col">
 
   <!-- Image Slider -->
   <div class="relative w-full h-[500px] overflow-hidden mb-10">
@@ -43,10 +43,10 @@
   </div>
 
   <div class="flex justify-center mb-6">
-    <a href="{% url 'main:create_product' %}" class="w-auto flex justify-center py-2 px-4 text-sm font-medium text-black bg-white hover:bg-gray-200 focus:outline-none focus:ring-0 transition duration-200 ease-in-out transform hover:scale-105">
+    <a href="{% url 'main:create_product' %}" class="w-auto flex justify-center py-2 px-4 text-sm rounded-md font-medium text-black bg-white hover:bg-gray-200 focus:outline-none focus:ring-0 transition duration-200 ease-in-out transform hover:scale-105">
       Add New Product
     </a>
-    <button data-modal-target="crudModal" data-modal-toggle="crudModal" class="w-auto ml-4 flex justify-center py-2 px-4 text-sm font-medium text-black bg-white hover:bg-gray-200 focus:outline-none focus:ring-0 transition duration-200 ease-in-out transform hover:scale-105" onclick="showModal();">
+    <button data-modal-target="crudModal" data-modal-toggle="crudModal" class="w-auto ml-4 flex justify-center py-2 px-4 text-sm rounded-md font-medium text-black bg-white hover:bg-gray-200 focus:outline-none focus:ring-0 transition duration-200 ease-in-out transform hover:scale-105" onclick="showModal();">
       Add New Product by AJAX
     </button>
   </div>  
