--- a/main/templates/edit_product.html
+++ b/main/templates/edit_product.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 {% include 'navbar.html' %}
-<div class="flex flex-col min-h-screen bg-[#0c0c0c]">
+<div class="flex flex-col min-h-screen bg-gradient-to-r from-[#172810] to-[#102820]">
   <div class="container mx-auto px-4 py-8 mt-16 max-w-xl">
     <h1 class="text-3xl font-bold text-center mb-8 text-white">Edit Product</h1>
   
@@ -32,9 +32,9 @@
             {% endfor %}
 
           <div class="flex justify-center mt-6">
-              <button type="submit" class="w-auto flex justify-center py-2 px-4 text-sm font-bold rounded-[15px] text-black bg-[#05e500] hover:bg-[#04b600] focus:outline-none focus:ring-0 transition duration-200 ease-in-out
+              <button type="submit" class="w-auto flex justify-center py-2 px-4 text-sm font-bold rounded-md text-white bg-[#8a6420] hover:bg-[#4d2d18] focus:outline-none focus:ring-0 transition duration-200 ease-in-out
               hover:shadow-[0px_0px_15px_5px_rgba(255,255,255,0.4)] active:animate-button-press">
-                  Save
+                  Edit Product
               </button>
           </div>
       </form>
